# mimicry

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: android.yml  linux.yml  windows.yml
assets/: README.md
sources/: main.cpp
